# oni-recipe-api

./: .gitignore  README.md  manage.py  pyproject.toml
accounts/: permissions.py  serializers.py  urls.py  views.py
oni_recipe_api/: asgi.py  settings.py  urls.py  wsgi.py
templates/accounts/: Profile.html
templates/oni_recipe_api/: recipe_showcase.html
v2/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
v2/migrations/: 0001_initial.py  0002_alter_ingredients_options_and_more.py
v3/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
v3/management/commands/: seed_recipes.py
v3/migrations/: 0001_initial.py  0002_alter_ingredients_slug_alter_recipeoni_food_quality_and_more.py  0003_alter_ingredients_food_quality_and_more.py  0004_alter_ingredients_food_quality_and_more.py  0005_alter_recipeoni_food_quality.py  0006_alter_ingredients_food_quality_and_more.py  0007_order.py  0008_orderitem.py  0009_remove_orderitem_order_remove_orderitem_product_and_more.py  0010_ingredients_description.py  0011_alter_orders_customer_foodmanagermodel_and_more.py  0012_alter_orders_customer.py  0013_rename_foodmanagermodel_foodordersmodel.py  0014_rename_foodordersmodel_foodorders.py  0015_alter_foodorders_category_alter_foodorders_food_item_and_more.py  0016_onibuildings_onielements_buildingorders_and_more.py  0017_remove_buildingorders_order_and_more.py  0018_elementorders_order.py  0019_alter_orders_status.py  0020_ingredients_creator_recipeingredients_creator_and_more.py
